<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".ui.ProfileFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/fragment_profile_tb"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_fragment_title"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/fragment_profile_edit_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/fragment_profile_edit_tv"
                android:textColor="@color/color_primary"
                android:fontFamily="@font/montserrat"
                android:textSize="18sp"
                android:drawableEnd="@drawable/edit_icon"/>
        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/fragment_profile_image"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_margin="16dp"
            android:src="@drawable/avatar_female_one"
            app:shapeAppearanceOverlay="@style/RoundImage" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/fragment_profile_display_name_header_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/fragment_profile_name_placeholder"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/fragment_profile_stacK_squad_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/fragment_profile_stackAndSquad_placeholder"
                    android:textSize="16sp"
                    android:layout_gravity="center"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/fragment_profile_name_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/fragment_profile_name"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/fragment_profile_nameValue_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="16dp"
                        android:layout_toEndOf="@id/fragment_profile_name_tv"
                        android:fontFamily="@font/montserrat"
                        android:gravity="end"
                        android:text="@string/fragment_profile_name_placeholder"
                        android:textAllCaps="false"
                        android:textSize="16sp" />

                    <View
                        android:id="@+id/fragment_profile_divider1"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/fragment_profile_name_tv"
                        android:layout_margin="8dp"
                        android:background="#828282" />

                    <TextView
                        android:id="@+id/fragment_profile_email_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/fragment_profile_divider1"
                        android:layout_margin="16dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/fragment_profile_email"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/fragment_profile_emailValue_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/fragment_profile_divider1"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="16dp"
                        android:layout_toEndOf="@id/fragment_profile_email_tv"
                        android:fontFamily="@font/montserrat"
                        android:gravity="end"
                        android:text="@string/fragment_profile_emailValue"
                        android:textAllCaps="false"
                        android:textSize="16sp" />

                    <View
                        android:id="@+id/fragment_profile_divider2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/fragment_profile_email_tv"
                        android:layout_margin="8dp"
                        android:background="#828282" />

                    <TextView
                        android:id="@+id/fragment_profile_squad_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/fragment_profile_divider2"
                        android:layout_margin="16dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/fragment_profile_squad"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/fragment_profile_squadValue_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/fragment_profile_divider2"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="16dp"
                        android:layout_toEndOf="@id/fragment_profile_squad_tv"
                        android:fontFamily="@font/montserrat"
                        android:gravity="end"
                        android:text="@string/fragment_profile_squadValue"
                        android:textAllCaps="false"
                        android:textSize="16sp" />

                    <View
                        android:id="@+id/fragment_profile_divider3"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/fragment_profile_squad_tv"
                        android:layout_margin="8dp"
                        android:background="#828282" />

                    <TextView
                        android:id="@+id/fragment_profile_stack_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/fragment_profile_divider3"
                        android:layout_margin="16dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/fragment_profile_stack"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/fragment_profile_stackValue_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/fragment_profile_divider3"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="16dp"
                        android:layout_toEndOf="@id/fragment_profile_stack_tv"
                        android:fontFamily="@font/montserrat"
                        android:gravity="end"
                        android:text="@string/fragment_profile_stackValue"
                        android:textAllCaps="false"
                        android:textSize="16sp" />

                    <View
                        android:id="@+id/fragment_profile_divider4"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/fragment_profile_stack_tv"
                        android:layout_margin="8dp"
                        android:background="#828282" />

                    <TextView
                        android:id="@+id/fragment_profile_mobile_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/fragment_profile_divider4"
                        android:layout_margin="16dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/fragment_profile_mobile"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/fragment_profile_mobileValue_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/fragment_profile_divider4"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="16dp"
                        android:layout_toEndOf="@id/fragment_profile_mobile_tv"
                        android:fontFamily="@font/montserrat"
                        android:gravity="end"
                        android:text="@string/fragment_profile_mobileValue"
                        android:textAllCaps="false"
                        android:textSize="16sp" />

                    <View
                        android:id="@+id/fragment_profile_divider5"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/fragment_profile_mobile_tv"
                        android:layout_margin="8dp"
                        android:background="#828282" />

                </RelativeLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fragment_profile_logOut_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:padding="16dp"
                    android:text="@string/fragment_profile_logOut"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    app:cornerRadius="16dp" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</LinearLayout>